--- a/ref.bib
+++ b/ref.bib
@@ -30,6 +30,66 @@
   year          = "2019"
 }
 
+
+@electronic{ref:awslambda,
+  title         = "AWS Lambda",
+  url           = "https://aws.amazon.com/lambda/",
+  key           = "awslambda",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+
+@electronic{ref:awscloudwatch,
+  title         = "Amazon CloudWatch",
+  url           = "https://aws.amazon.com/cloudwatch/",
+  key           = "awscloudwatch",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:awss3,
+  title         = "Amazon Cloud Object Storage",
+  url           = "https://aws.amazon.com/s3/",
+  key           = "awss3",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:awscli,
+  title         = "AWS Command Line Interface",
+  url           = "https://aws.amazon.com/cli/",
+  key           = "awscli",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:celery,
+  title         = "Celery",
+  url           = "http://www.celeryproject.org/",
+  key           = "celery",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+
+@electronic{ref:lambdalimits,
+  title         = "Basic AWS Lambda Function",
+  url           = "https://docs.aws.amazon.com/lambda/latest/dg/resource-model.html",
+  key           = "Lambda Limits",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+
+@electronic{ref:redis,
+  title         = "Redis",
+  url           = "https://redis.io/",
+  key           = "redis",
+  month         = "Jan.",
+  year          = "2019"
+}
+
 @electronic{ref:pricing ,
   title         = "AWS Lambda Pricing",
   url           = "https://aws.amazon.com/lambda/pricing/",
@@ -152,4 +212,105 @@ month={March},}
   key           = "sparse_prior",
   month         = "Jan.",
   year          = "2019"
+}
+
+@electronic{ref:serverless_framework,
+  title         = "Serverless Framework",
+  url           = "https:https://serverless.com/",
+  key           = "Serverless Framework",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:cloudformation,
+  title         = "AWS Cloudformation",
+  url           = "https://aws.amazon.com/cloudformation/",
+  key           = "Cloudformation",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:codedeploy,
+  title         = "AWS CodeDeploy",
+  url           = "https://aws.amazon.com/codedeploy/",
+  key           = "CodeDeploy",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+
+@electronic{ref:terraform,
+  title         = "Terraform by Hashicorp",
+  url           = "https://www.terraform.io/",
+  key           = "Terraform",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:hyperopt,
+  title         = "Hyperopt",
+  url           = "http://hyperopt.github.io/hyperopt/",
+  key           = "Hyperopt",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:hyperas,
+  title         = "Hyperas",
+  url           = "http://maxpumperla.com/hyperas/",
+  key           = "Hyperas",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:keras,
+  title         = "Keras",
+  url           = "https://keras.io/",
+  key           = "Keras",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+
+@inproceedings{ref:matrix,
+author = {Werner, Sebastian and Kuhlenkamp, Jorn and Klems, Markus and Muller, Johannes and Tai, Stefan},
+year = {2018},
+month = {12},
+pages = {358-365},
+title = {Serverless Big Data Processing using Matrix Multiplication as Example},
+doi = {10.1109/BigData.2018.8622362}
+}
+
+@incollection{ref:baldini2017,
+  title={Serverless computing: Current trends and open problems},
+  author={Baldini, Ioana and Castro, Paul and Chang, Kerry and Cheng, Perry and Fink, Stephen and Ishakian, Vatche and Mitchell, Nick and Muthusamy, Vinod and Rabbah, Rodric and Slominski, Aleksander and others},
+  booktitle={Research Advances in Cloud Computing},
+  pages={1--20},
+  year={2017},
+  publisher={Springer}
+}
+
+@inproceedings{ref:claesen2014hyperparameter,
+  title={Hyperparameter tuning in Python using Optunity},
+  author={Claesen, Marc and Simm, Jaak and Popovic, Dusan and Moor, BD},
+  booktitle={Proceedings of the International Workshop on Technical Computing for Machine Learning and Mathematical Engineering},
+  volume={1},
+  pages={3},
+  year={2014}
+}
+
+@article{ref:onesteptwostep,
+  title={Serverless Computing: One Step Forward, Two Steps Back},
+  author={Hellerstein, Joseph M and Faleiro, Jose and Gonzalez, Joseph E and Schleier-Smith, Johann and Sreekanti, Vikram and Tumanov, Alexey and Wu, Chenggang},
+  journal={arXiv preprint arXiv:1812.03651},
+  year={2018}
+}
+
+@inproceedings{ref:vizier,
+  title={Google vizier: A service for black-box optimization},
+  author={Golovin, Daniel and Solnik, Benjamin and Moitra, Subhodeep and Kochanski, Greg and Karro, John and Sculley, D},
+  booktitle={Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={1487--1495},
+  year={2017},
+  organization={ACM}
 }
